--- a/app/index.html
+++ b/app/index.html
@@ -19,9 +19,7 @@
     <!-- endbuild -->
 
 </head>
-<body><script id="__bs_script__">//<![CDATA[
-document.write("<script async src='/browser-sync/browser-sync-client.2.13.0.js'><\/script>".replace("HOST", location.hostname));
-//]]></script>
+<body>
 
 <!--[if lt IE 10]>
 <p>You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
@@ -37,20 +35,33 @@ document.write("<script async src='/browser-sync/browser-sync-client.2.13.0.js'>
         <div class="top-panel">
 
             <!--Блок логотипа-->
-            <a href = "#" class = "logo-header">
-                <span class="logo-header__title">pex</span>
-                <span class="logo-header__tagline">Photoshop Website template</span>
-            </a>
+            <div class="top-logo">
+                <a href = "#" class = "logo-header">
+                    <span class="logo-header__title">pex</span>
+                    <span class="logo-header__tagline">Photoshop Website template</span>
+                </a>
+            </div>
+
 
             <!--Блок навигации-->
             <div class="top-navigation">
                 <nav class = "navigation">
                     <ul class = "navigation-list">
-                        <li class = "navigation-item navigation-item_current">About</li>
-                        <li class = "navigation-item">How It Works</li>
-                        <li class = "navigation-item">Services</li>
-                        <li class = "navigation-item">FAQ</li>
-                        <li class = "navigation-item">Contact</li>
+                        <li class = "navigation-item navigation-item_current">
+                            <a class="navigation-link" href = "#">About</a>
+                        </li>
+                        <li class = "navigation-item">
+                            <a class="navigation-link" href = "#">How It Works</a>
+                        </li>
+                        <li class = "navigation-item">
+                            <a class="navigation-link" href = "#">Services</a>
+                        </li>
+                        <li class = "navigation-item">
+                            <a class="navigation-link" href = "#">FAQ</a>
+                        </li>
+                        <li class = "navigation-item">
+                            <a class="navigation-link" href = "#">Contact</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -60,7 +71,7 @@ document.write("<script async src='/browser-sync/browser-sync-client.2.13.0.js'>
                 <div class="search">
                     <form action = "" class = "form-search">
                         <input type = "text" class = "input" placeholder="Search Website">
-                        <button type="submit" class="button"><i class="fa fa-search" aria-hidden="true"></i></button>
+                        <label class="label"><i class="fa fa-search" aria-hidden="true"></i></label>
                     </form>
                 </div>
             </div>
@@ -90,6 +101,108 @@ document.write("<script async src='/browser-sync/browser-sync-client.2.13.0.js'>
 </header>
 <!--end-HEADER-->
 
+<!--Section 1-->
+<section class="section-1">
+    <div class="container">
+        <div class="about">
+            <div class="article article-1">
+                <h4 class="article-header">A fantastic heading</h4>
+                <p class="article-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium animi autem consequatur deserunt dolore doloremque eos eum fuga illo, ipsam itaque molestiae mollitia, neque omnis quia quo repudiandae veritatis voluptatum!
+                </p>
+            </div>
+            <div class="article article-2">
+                <h4 class="article-header">A fantastic heading</h4>
+                <p class="article-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium animi autem consequatur deserunt dolore doloremque eos eum fuga illo, ipsam itaque molestiae mollitia, neque omnis quia quo repudiandae veritatis voluptatum!
+                </p>
+            </div>
+            <div class="article article-3">
+                <h4 class="article-header">A fantastic heading</h4>
+                <p class="article-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium animi autem consequatur deserunt dolore doloremque eos eum fuga illo, ipsam itaque molestiae mollitia, neque omnis quia quo repudiandae veritatis voluptatum!
+                </p>
+            </div>
+            <div class="article article-4">
+                <h4 class="article-header">A fantastic heading</h4>
+                <p class="article-text">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Accusantium animi autem consequatur deserunt dolore doloremque eos eum fuga illo, ipsam itaque molestiae mollitia, neque omnis quia quo repudiandae veritatis voluptatum!
+                </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="section-2">
+    <div class="container">
+        <div class="action">
+            <h3 class="action-header">
+                Wicked & whack, bang bang boo!
+            </h3>
+            <p class="action-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut</p>
+            <button class="button action-button">
+                Get Started Today
+            </button>
+        </div>
+    </div>
+</section>
+
+<section class="section-3">
+    <div class="container">
+        <div class="s3-inner">
+            <h3 class="s3-inner-header">A heading is what you need here</h3>
+            <p class="s3-inner-description">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ab accusantium enim est excepturi exercitationem fuga, harum illo iste minima nemo nobis officia pariatur, perspiciatis placeat quidem quisquam quod, voluptas voluptate!</p>
+            <p class="s3inner-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias deleniti ducimus esse itaque sit. Ab animi culpa cupiditate, ducimus hic illum impedit magnam maiores nostrum possimus quae, quasi quibusdam rerum!</p>
+
+        </div>
+    </div>
+</section>
+
+<section class="section-4">
+    <div class="container-fluid">
+        <div class="container">
+            <div class="s4-inner">
+                <h3 class="s4-inner-header">Experience the rush today</h3>
+                <p class="s4-inner-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua consectetur adipisicing elit.</p>
+                <button class="button s4-inner-button">
+                    Get Started Today
+                </button>
+                <p class="s4-inner-substring">Lorem ipsum dolor sit amet, consectetur </p>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="section-5">
+    <div class="container">
+        <div class="s5-inner">
+            <span class="s5-inner-prof">
+                Photography
+            </span>
+            <h3 class="s5-inner-header">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit
+            </h3>
+            <div class="s5-inner-signature">
+                <img src = "images/avatar.jpg" alt = "avatar" class="s5-inner-avatar">
+                <span class="s5-inner-caption">Blaz Robar, god like web designer</span>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section class="section-6">
+    <div class="container">
+        <div class="s6-inner">
+            <h3 class="s6-inner-header">A heading is what you need here</h3>
+            <p class="s6-inner-text">empor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
+            <p class="s6-inner-substring">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. </p>
+        </div>
+    </div>
+</section>
+
+<section class="contacts">
+
+</section>
 
 
 
