--- a/app/index.html
+++ b/app/index.html
@@ -201,7 +201,31 @@
 </section>
 
 <section class="contacts">
-
+    <div class="container">
+        <div class="contacts-inner">
+            <div class="contacts-inner-intro">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus sed ipsum pulvinar, consequat ipsum non, sodales augue. Donec dapibus ipsum rutrum congue egestas. Curabitur fringilla tortor non aliquam congue. Class aptent taciti sociosqu ad litora torquent per conubia nostra.</p>
+                <h3>Get in touch</h3>
+                <p>Steven Bernson, Attorney at Law<br>1556 Broadway, suite 416<br>New York, NY, 10120, USA </p>
+                <p class="emal">E-mail: help@yomuma.com<br>+8 800 555 35 35</p>
+                <div class="contacts-inner-social">
+                    <a href="#"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                    <a href="#"><i class="fa fa-behance" aria-hidden="true"></i></a>
+                </div>
+            </div>
+            <div class="contacts-inner-form">
+                <form id="form-contacts">
+                    <input type="text" name="name" placeholder="Name *" class="form-left" required="">
+                    <input type="email" name="mail" placeholder="E-mail *" class="form-right" required="">
+                    <input type="tel" name="phone" placeholder="Telephone *" class="form-left" required="">
+                    <input type="text" name="website" placeholder="Website" class="form-right">
+                    <textarea name="message" placeholder="Message *" id="message" cols="10" rows="5" required=""></textarea>
+                    <button type="submit">Submit</button>
+                </form>
+            </div>
+        </div>
+    </div>
 </section>
 
 
